[package]
name = "amm-cli"
version = "0.1.0"
edition = "2021"

[features]
devnet = ["raydium_amm/devnet"]

[dependencies]
bs58 = { version = "0.5.1" }
base64 = "0.22.1"

anchor-client = "=0.29.0"
anchor-lang = "=0.29.0"
serum_dex = { version = "0.5.10", git = "https://github.com/raydium-io/openbook-dex", default-features = false, features = [
    "client",
    "no-entrypoint",
] }
raydium_amm = { git = "https://github.com/raydium-io/raydium-amm", default-features = false, features = [
    "client",
    "no-entrypoint",
] }
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { version = "=0.9.0", features = ["no-entrypoint"] }
solana-client = "<2.0.0"
solana-sdk = "<2.0.0"
anyhow = "1.0.53"
safe-transmute = "0.11.2"
arrayref = "0.3.6"
clap = { version = "4.1.8", features = ["derive"] }
toml = "0.8.19"
hex = "0.4.3"
solana-account-decoder = "<2.0.0"
solana-transaction-status = "<2.0.0"
serde_json = { version = "1.0.78" }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3.3" }
[lib]
crate-type = ["cdylib", "lib"]
